2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: New file
	* ChangeLog: Fix email addresses

2000-09-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* LICENSE.NET, README, README.configure: Spelling corrections.

2000-09-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-bsps.m4: Fix c4* and sim68000 entries

2000-08-30	Joel Sherrill <joel@OARcorp.com>

	* LICENSE.NET, LICENSE.RPCXDR, LICENSE.WEBSERVER: New files.

2000-08-25	Joel Sherrill <joel.sherrill@OARcorp.com>

	* ChangeLog: Moved incorrect entries to make/ChangeLog.

2000-08-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/check-bsps.h: 
	  - Add pck6-BSP
	  - Exclude ChangeLog from being picked up as BSP 
	* aclocal/bsp-alias.m4: Add pck6-BSP

2000-08-10	Joel Sherrill <joel@OARcorp.com>

	* ChangeLog: New file.