@@ -1,3 +1,7 @@
+2000-09-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* aclocal/project-root.m4: Introduce PROJECT_TOPdir, add comments.
+
 2000-09-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* automake/compile.am: New file
